apps/prod/mow/stub.smotra.net/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - stub.smotra.net
    secretName: https-secret
  rules:
  - host: stub.smotra.net
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ui-service
            port:
              number: 80
